Fixed generate button and styling issues

--- a/index.html
+++ b/index.html
@@ -20,18 +20,20 @@
         
         <!-- partial:index.partial.html -->
         <label class="dayNight">
-            <input type="checkbox">
-            <div class="toggle checked"></div>
+            <input checked type="checkbox">
+            <div class="toggle"></div>
         </label>
     </nav>
 
-    <div id="quote" class="main">
+    <div id="quote" class="quote">
         <p>Intelligence will never stop being beautiful!</p>
     </div>
 
     <button id="generate" onclick="getNewQuote();" class="generate">GENERATE</button>
 
 
+
+   
     <!-- dribbble -->
   
     <!-- partial -->
