Added placeholder text for quote

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </nav>
 
     <div id="quote" class="quote">
-        <p>Intelligence will never stop being beautiful!</p>
+        <p>Generating Ideas...💡✨</p>
     </div>
 
     <button id="generate" onclick="getNewQuote();" class="generate">GENERATE</button>
